# news-vector-search

./: .env.sample  README.md  pyproject.toml  requirements.txt
data/raw/: news_01-22.csv
news_vector_search/: config.py
news_vector_search/data/: processor.py
news_vector_search/models/: embedding.py  search.py
news_vector_search/visualization/: plots.py
tests/: test_embedding.py  test_processor.py
