[project]
name = "news-vector-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "torch>=2.5.1",
    "transformers>=4.48.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["news_vector_search*"]